# anchor-cookbook

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.ipynb
00-pipeline/: 01_basic_pipeline.ipynb  02_builtin_steps.ipynb  03_custom_steps.ipynb  04_async_pipelines.ipynb  05_pipeline_diagnostics.ipynb  06_context_window.ipynb  07_enrichers.ipynb  README.md
01-memory/: 01_sliding_window.ipynb  02_summary_buffer.ipynb  03_graph_memory.ipynb  04_memory_manager.ipynb  05_eviction_policies.ipynb  06_decay_strategies.ipynb  07_consolidation.ipynb  08_garbage_collection.ipynb  README.md
02-retrieval/: 01_dense_retriever.ipynb  02_sparse_retriever.ipynb  03_hybrid_retriever.ipynb  04_scored_memory_retriever.ipynb  05_async_retrievers.ipynb  06_late_interaction.ipynb  07_rerankers.ipynb  08_routers.ipynb  09_custom_retriever.ipynb  README.md
03-agents/: 01_basic_agent.ipynb  02_tool_decorator.ipynb  03_skills_system.ipynb  04_agent_with_retrieval.ipynb  05_streaming_agent.ipynb  README.md
04-ingestion/: 01_document_ingester.ipynb  02_chunking_strategies.ipynb  03_parsers.ipynb  04_metadata_enrichment.ipynb  05_parent_child_chunks.ipynb  README.md
05-query/: 01_hyde_transformer.ipynb  02_multi_query.ipynb  03_decomposition.ipynb  04_step_back.ipynb  05_classifiers.ipynb  06_query_pipeline.ipynb  README.md
06-evaluation/: 01_retrieval_metrics.ipynb  02_llm_evaluator.ipynb  03_pipeline_evaluator.ipynb  04_batch_evaluator.ipynb  05_ab_testing.ipynb  06_human_evaluation.ipynb  README.md
07-observability/: 01_tracing.ipynb  02_exporters.ipynb  README.md  (+2 more)
(+39 files in other folders)
