[project]
name = "anchor-cookbook"
version = "0.1.0"
description = "Hands-on Jupyter Notebook recipes for the Anchor context engineering toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Astro", email = "astro@anchor.dev" }
]
keywords = ["anchor", "context-engineering", "cookbook", "jupyter", "tutorials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license-files = ["LICENSE"]

dependencies = [
    "astro-anchor[all]>=0.1.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbformat>=5.0",
]

[project.urls]
Homepage = "https://github.com/arthurgranja/anchor-cookbook"
Repository = "https://github.com/arthurgranja/anchor-cookbook"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
